# battlecontrol

./: .dockerignore  .gitignore  CREDITS.md  Cargo.toml  Dockerfile  PLAN.md  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
assets/: battle-worker-AElcktwJ.js  battle-worker-B1TnO97B.js  battle-worker-BLdwKlLW.js  battle-worker-BQy1M2AA.js  battle-worker-BosbvxAL.js  battle-worker-CfSr_Jhd.js  battle-worker-D-YjrG2s.js  battle-worker-DPF4Byzx.js  battle-worker-USyHQqxP.js  battle-worker-r04y_oA1.js  game_logic_wasm_bg-B0-vzKLA.wasm  game_logic_wasm_bg-BhVEQ6Cc.wasm  game_logic_wasm_bg-BhaTRI2q.wasm  game_logic_wasm_bg-Bq5WY0mW.wasm  game_logic_wasm_bg-CrHgt2j9.wasm  index-2TrUWMe_.css  (+24 more)
common/: Cargo.toml  build.rs
common/src/: domain.rs  dto.rs
common/src/domain/: env_var.rs  error.rs  error_code.rs  i18n.rs  language.rs  resource.rs  url_builder.rs
common/src/dto/: create_game_request_dto.rs  game_dto.rs  game_player_dto.rs  join_game_request_dto.rs  login_request_dto.rs  passkey_finish_login_request_dto.rs  passkey_finish_registration_request_dto.rs  passkey_options_dto.rs  passkey_start_login_request_dto.rs  passkey_start_registration_request_dto.rs  profile_image_upload_dto.rs  recover_user_request_dto.rs  recovery_code_dto.rs  registration_request_dto.rs  save_selected_race_request_dto.rs  update_user_profile_request_dto.rs  user_dto.rs  user_settings_dto.rs
server/: Cargo.toml
server/src/: adapters.rs  domain.rs  main.rs  ports.rs  test_helpers.rs
server/src/adapters/: api_adapter.rs  auth_api_adapter.rs  axum_adapter.rs  battle_session_hub.rs  db.rs  game_api_adapter.rs  game_room_hub.rs  sqlite_game_repository.rs  sqlite_session_repository.rs  sqlite_user_repository.rs  tracing_logger_adapter.rs
server/src/adapters/db/: game_players_table.rs  games_table.rs  passkeys_table.rs  recovery_codes_table.rs  row.rs  sessions_table.rs  sqlite_adapter.rs  table_entity.rs  trusted_players_table.rs  user_settings_table.rs  users_table.rs
server/src/domain/: authenticator.rs  game_lobby.rs
server/src/ports/: auth_driving_port.rs  battle_session_driven_port.rs  game_driving_port.rs  game_repository_driven_port.rs  game_room_driven_port.rs  logger_driving_port.rs  session_repository_driven_port.rs  user_repository_driven_port.rs
server/src/test_helpers/: fake_auth_driving_port.rs  fake_game_repository.rs  fake_game_room_driven_port.rs  fake_logger_driving_port.rs  fake_user_repository.rs  sample_data.rs
(+219 files in other folders)
