[package]
name = "common"
version.workspace = true
edition = "2024"

[features]
reqwest = ["dep:reqwest"]

[dependencies]
reqwest = { version = "0.12", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[dev-dependencies]
serde_json = "1"

[build-dependencies]
serde_yml = "0.0"
