[package]
name = "server"
version.workspace = true
edition = "2024"

[dependencies]
axum = "0.8"
tower-http = { version = "0.6", features = ["fs"] }
common = { path = "../common" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.89"
rusqlite = { version = "0.34", features = ["bundled"] }
tracing = "0.1"
webauthn-rs = "0.5.4"
uuid = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
http-body-util = "0.1"
serde_json = "1"
tower = { version = "0.5", features = ["util"] }
