[package]
name = "server"
version.workspace = true
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["multipart", "ws"] }
tower-http = { version = "0.6", features = ["fs"] }
common = { path = "../common" }
game-logic = { path = "../game-logic" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
async-trait = "0.1.89"
rusqlite = { version = "0.34", features = ["bundled"] }
tracing = "0.1"
webauthn-rs = "0.5.4"
uuid = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tower = { version = "0.5", features = ["util"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
cookie = "0.18"

[dev-dependencies]
http-body-util = "0.1"
serde_json = "1"
